--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Hello, world!</title>
+        <title>Cool site</title>
+        <!--link rel="icon" href=""-->  
     </head>
     <body>
         <p>This is a test for Github Pages.</p>
