--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Cool site</title>
-        <link rel="icon" href="https://github.com/luemonkey123/site/blob/main/one-ring.png">
+        <link rel="icon" href="https://github.com/luemonkey123/site/blob/main/one-ring.png?raw=true">
     </head>
     <body>
         <p>This is a test for Github Pages.</p>
